quinto commit do css

--- a/assets/index.html
+++ b/assets/index.html
@@ -11,8 +11,9 @@
 </head>
 <body>
     <div>
+    <div>
         <img src="./image-omelette.jpeg" alt="imagem do omelete">
-        <h1>Receita de Omelete simples</h1>
+        <h1>Receita de Omelete Simples</h1>
         <p>Um prato fácil e rápido, perfeito para qualquer refeição. Esta omelete clássica combina ovos batidos cozidos à perfeição, opcionalmente recheados com sua escolha de queijo, legumes ou carnes.</p>
     </div>
 
@@ -96,3 +97,4 @@
     </div>
 </body>
 </html>
+</div>
