--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div>
     <div>
-        <img src="./image-omelette.jpeg" alt="imagem do omelete">
+        <img src="./assets/image-omelette.jpeg" alt="image-omelete">
         <h1>Receita de Omelete Simples</h1>
         <p>Um prato fácil e rápido, perfeito para qualquer refeição. Esta omelete clássica combina ovos batidos cozidos à perfeição, opcionalmente recheados com sua escolha de queijo, legumes ou carnes.</p>
     </div>
